# pytalk-jjj

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: api.rst  conf.py  events.rst  index.rst  robots.txt  whats-new.rst
docs/_static/csv/: bot.csv  server_channel_n_file.csv  user.csv
pytalk/: __init__.py  _utils.py  audio.py  backoff.py  bot.py  channel.py  codec.py  device.py  download_sdk.py  enums.py  exceptions.py  instance.py  message.py  permission.py  server.py  statistics.py  streamer.py  subscription.py  tt_file.py  user.py  user_account.py
pytalk/tools/: __init__.py  downloader.py  ttsdk_downloader.py
