[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-talk-ex"
dynamic = ["version"]
description = "a simple but powerful pythonic library for making bots for the TeamTalk5 Conferencing System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "BlindMaster24", email = "jessica.tegner@outlook.com"}]
keywords = ["teamtalk", "teamtalk5", "teamtalk sdk", "conferencing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4~=4.14",
    "patool~=4.0",
    "requests~=2.32",
    "typing-extensions~=4.15",
    "uvloop; sys_platform == 'linux'",
]

[project.urls]
"Issue Tracker" = "https://github.com/BlindMaster24/pytalk/issues"

[tool.hatch.version]
path = "pytalk/__init__.py"

[tool.hatch.envs.default]
python = "python3"
installer = "uv"

[tool.hatch.envs.default.scripts]
sdk-download = "python -m pytalk.tools.ttsdk_downloader"

[tool.hatch.envs.docs]
python = "python3"
installer = "uv"
dependencies = [
    "sphinx-sitemap~=2.6",
    "sphinx~=8.1",
    "sphinxcontrib-napoleon~=0.7",
    "sphinxcontrib-trio~=1.1",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs docs/_build"




[tool.ruff]
line-length = 88
exclude = [
    "docs/*",
    "tests/*",
    "__pycache__",
    "pytalk/implementation/*",
    "pytalk/__init__.py",
    "pytalk/implementation/__init__.py",
    "pytalk/tools/*",
    "example.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "ANN", "ASYNC", "S", "BLE", "A", "B", "C4", "DTZ", "ERA", "FA", "ICN", "PIE", "PL", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PERF", "FURB", "G", "PTH"]
ignore = ["D203", "D211", "D212", "D213", "ISC001", "S603", "UP022", "N813", "D400", "D415"]


[tool.mypy]
strict = true
exclude = [
    "docs/",
    "tests/",
    "pytalk/implementation/",
    "pytalk/implementation/__init__.py",
    "pytalk/tools/*",
    "example.py",
]
disable_error_code = ["no-untyped-call"]


[[tool.mypy.overrides]]
module = "pytalk.implementation.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "patoolib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvloop"
ignore_missing_imports = true



[tool.hatch.envs.dev]
python = "python3"
installer = "uv"
dependencies = [
    "pre-commit~=4.3",
    "ruff~=0.14",
    "flake8-logging-format",
    "mypy~=1.18",
    "types-requests",
    "types-beautifulsoup4",
]

[tool.hatch.envs.dev.scripts]
lint = "ruff check --fix"
format = "ruff format ."
typecheck = "mypy pytalk"
check = "pre-commit run --all-files"
hooks = "pre-commit install"

[tool.hatch.build.targets.wheel]
packages = ["pytalk"]
